Release Notes

* current
  * using Express for urgent or high prio input
  * checking metadata before closing sub datasets to avoid a rucio bug
  * fixed datasetMgr to avoid lookup for nonexistent datasets
  * fixed datasetMgr to take distributed dataset into account
  * fixed for internal merge + zero suppression
  * changed AdderGen and AdderAtlas to treat missing files more properly
  * added allowNoOutput
  * improved checkInputFiles
  * changed copyFileRecord to update JEDI files too
  * diabled inputFileCheck in Adder for pilotRetry
  * fixed propageteResult for killed merging after pmerge incremented attemptNr
  * added RSENotFound
  * patched AdderAtlas for MWT2 PRODDISK
  * added dynamicNumEvents stuff
  * changed checkTaskStatus
  * changed copyFileRecord to work with original or w/o original
  * changed regexp to look for unmerged files 
  * registring location for GEN
  * fixed user group accounting for mergeOutput
  * capping number of running user jobs 
  * changed fairshare to work with HS06
  * removed exception in fairshare so that T1 uses cloud.fairshare if empty
  * added ESMERGERECOVERABLE. Eventually should be taken care of by retrial module
  * added giveGUID to EventPicking
  * changed hint for JEDI_Events
  * added some ES error codes
  * updating nEventsUsed only for input datasets
  * added CloserAtlasPlugin
  * initializing DBProxy._logger when importing module since resetting in JediDBProxy was broken 
  * added machinery to leave files where they are produced
  * using Express for urgent or prio>1000
  * added NOWAIT in killEventServiceConsumers
  * added NOWAIT in killJob
  * added validation check for pmerge 
  * added disableFurtherAttempt not to retry killed pmerge
  * added hint for JEDI_Events
  * using executemany to insert event ranges
  * fixed retryJob for ES merge
  * added WORLD
  * removed rse from registerNewDataset for _sub
  * fixed ppEvent not to generate merge jobs when there are failed events in another process